# structsolve

./: .travis.yml  LICENSE  README.md  coverage_script.bat  pyproject.toml  setup.py
.github/workflows/: auto_release.yml  coverage.yml  pytest.yml  pythonpublish.yml
structsolve/: analysis.py  arc_length_riks.py  freq.py  linear_buckling.py  newton_raphson.py  static.py
tests/: test_analysis.py  test_freq.py  test_linear_buckling.py  test_sparseutils.py  test_static.py  test_static_deflection.py
