[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structsolve"
version = "0.3.0"
description = "Structural analysis solvers"
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.8"
authors = [
    { name = "Saullo G. P. Castro", email = "castrosaullo@gmail.com" },
]
keywords = [
    "structural analysis", "stress", "vibration", "linear buckling",
    "newton raphson", "arc length",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "flake8",
    "coverage",
    "composites",
    "buckling",
]

[project.urls]
Homepage = "https://github.com/compmech/structsolve"
Repository = "https://github.com/compmech/structsolve"

[tool.setuptools.packages.find]
include = ["structsolve*"]
